# briefcast

./: .gitignore  README.md  config.yaml  podcasts.yaml  pyproject.toml  state.json
.github/workflows/: roster-bot.yml  weekly.yml
docs/: index.html
docs/p/0f64fd67bb084986917f11c7b283eaf6/: 2026-07-12.html  feed.xml  index.html
docs/p/0f64fd67bb084986917f11c7b283eaf6/briefs/: 2026-07-12.md
docs/p/0f64fd67bb084986917f11c7b283eaf6/text/: 2026-07-12.txt
src/briefcast/: __init__.py  assemble.py  audio.py  config.py  feeds.py  main.py  notify.py  publish.py  roster_bot.py  state.py  synthesize.py  transcribe.py  tts.py
