[project]
name = "briefcast"
version = "0.1.0"
description = "Weekly curated podcast brief: written digest + generated 18-22 min audio episode with real sound bites"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "mutagen>=1.47.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
briefcast = "briefcast.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/briefcast"]
